added AdminConsole view, configured WebSecurityConfig for ADMIN

--- a/src/main/resources/templates/admin_console.html
+++ b/src/main/resources/templates/admin_console.html
@@ -4,15 +4,15 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PC Market Net</title>
+    <title>Консоль админа</title>
     <script th:inline="javascript" src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script th:inline="javascript" src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
     <script th:inline="javascript">
-        let productData = [[${productData}]]
+        let adminInfo = [[${adminInfo}]]
     </script>
 </head>
 <body>
-    <div id="app"></div>
-    <script th:inline="javascript" src="/js/main.js"></script>
+    <div id="admin"></div>
+    <script th:inline="javascript" src="/js/admin.js"></script>
 </body>
 </html>
