update admin and main page, refactoring entity

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,6 +5,7 @@
     <title>Регистрация</title>
 </head>
 <body>
+<div><a href="/">На главную</a></div>
 <div th:if="${message}">
     <p th:text="${message}" />
 </div>
