--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Авторизация </title>
+    <title>Авторизация</title>
 </head>
 <body>
+<!--<div><a href="/">На главную</a></div>-->
 <div th:if="${param.error}">
     Invalid username and password.
 </div>
