--- a/src/main/resources/templates/user_admin.html
+++ b/src/main/resources/templates/user_admin.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Консоль пользлователей</title>
+    <title>Консоль админа</title>
+    <script th:inline="javascript" src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script th:inline="javascript" src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
+    <script th:inline="javascript">
+        let allUser = [[${allUsers}]]
+    </script>
 </head>
 <body>
-    <div>
-        <a href="/">На главную</a>
-        <a href="/admin">Консоль администратора</a>
-    </div>
+    <div id="user_console"></div>
+    <script th:inline="javascript" src="/js/users.js"></script>
 </body>
 </html>
