--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -19,6 +19,9 @@
         <p th:text="${passwordMess}" />
     </div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div th:if="${password2Mess}">
+        <p th:text="${password2Mess}" />
+    </div>
     <div><label> Confirm password: <input type="password" name="password2"/> </label></div>
     <div th:if="${emailMess}">
         <p th:text="${emailMess}" />
