--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,37 +1,76 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
     <title>Регистрация</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-<div><a href="/">На главную</a></div>
-<div th:if="${message}">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">PC Market</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Главная</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Авторизация</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container mt-3">
+    <div th:if="${message}">
     <p th:text="${message}" />
+    </div>
+    <form th:action="@{/registration}" method="post">
+        <div class="form-row">
+            <div th:if="${usernameMess}">
+                <p th:text="${usernameMess}" />
+            </div>
+            <div class="form-group col-md-6">
+                <label>User Name :</label>
+                <input type="text" class="form-control" name="username" placeholder="User name"/>
+            </div>
+            <div th:if="${emailMess}">
+                <p th:text="${emailMess}" />
+            </div>
+            <div class="form-group col-md-6">
+                <label>Email:</label>
+                <input type="email" class="form-control" name="email" placeholder="Email"/>
+            </div>
+        </div>
+        <div th:if="${passwordMess}">
+            <p th:text="${passwordMess}" />
+        </div>
+        <div class="form-group">
+            <label>Password:</label>
+            <input type="password" class="form-control" name="password"/>
+        </div>
+        <div th:if="${password2Mess}">
+            <p th:text="${password2Mess}" />
+        </div>
+        <div class="form-group">
+            <label>Confirm password:</label>
+            <input type="password" class="form-control" name="password2"/>
+        </div>
+        <div th:if="${addressMess}">
+            <p th:text="${addressMess}" />
+        </div>
+        <div class="form-group">
+            <label> Address:</label>
+            <input type="text" class="form-control" name="address"/>
+        </div>
+        <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+    </form>
 </div>
-<form th:action="@{/registration}" method="post">
-    <div>Регистрация:</div>
-    <div th:if="${usernameMess}">
-        <p th:text="${usernameMess}" />
-    </div>
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div th:if="${passwordMess}">
-        <p th:text="${passwordMess}" />
-    </div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div th:if="${password2Mess}">
-        <p th:text="${password2Mess}" />
-    </div>
-    <div><label> Confirm password: <input type="password" name="password2"/> </label></div>
-    <div th:if="${emailMess}">
-        <p th:text="${emailMess}" />
-    </div>
-    <div><label> Email: <input type="text" name="email"/> </label></div>
-    <div th:if="${addressMess}">
-        <p th:text="${addressMess}" />
-    </div>
-    <div><label> Address: <input type="text" name="address"/> </label></div>
-    <div><input type="submit" value="Sign up"/></div>
-</form>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
