--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -1,39 +1,108 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
     <title>Отчетность</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <form action="/report/get" method="get">
-        <label>email</label>
-        <input type="text" name="email">
-        <label>address</label>
-        <input type="text" name="address">
-        <label>timeBefore</label>
-        <input type="date" name="timeBefore">
-        <label>timeAfter</label>
-        <input type="date" name="timeAfter">
-        <label>user name</label>
-        <input type="text" name="user">
-        <button type="submit">Найти</button>
-    </form>
-    <div>
-<!--        <div th:if="${message}">-->
-<!--            <h2 th:text="${message}"/>-->
-<!--        </div>-->
-<!--        <div th:unless="${message}">-->
-            <tr th:each="order: ${orders}">
-                <td th:text="${order.getEmail()}"></td><br>
-                <td th:text="${order.getAddress()}"></td><br>
-                <td th:text="${order.getOrderDate()}"></td><br>
-<!--                <td th:text="${order.getUsers()}"></td><br>-->
-                <br>
-            </tr>
-<!--        </div>-->
-
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">PC Market</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin">Консоль администратора</a>
+                </li>
+            </ul>
+            <span class="navbar-text mr-3" th:utext="${profile.username}"></span>
+            <form action="/logout" method="post">
+                <button type="submit" class="btn btn-primary mr-3">Выйти</button>
+            </form>
+        </div>
+    </nav>
+    <div class="container mt-3">
+        <form action="/report/filter" method="get">
+            <div class="form-group">
+                <label for="inputEmail">email</label>
+                <input id="inputEmail" class="form-control" type="text" name="email">
+            </div>
+            <div class="form-group">
+                <label for="inputAddress">address</label>
+                <input id="inputAddress" class="form-control" type="text" name="address">
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label>timeBefore</label>
+                    <input class="form-control" type="date" name="timeBefore">
+                </div>
+                <div class="form-group col-md-6">
+                    <label>timeAfter</label>
+                    <input class="form-control" type="date" name="timeAfter">
+                </div>
+            </div>
+            <div class="form-group">
+                <label>user name</label>
+                <input class="form-control" type="text" name="user">
+            </div>
+            <button type="submit" class="btn btn-primary">Найти</button>
+        </form>
     </div>
+
+    <div class="container mt-3">
+        <form action="/report/download" method="post">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Email</th>
+                <th scope="col">Address</th>
+                <th scope="col">Order date</th>
+                <th scope="col">product(name | price)</th>
+                <th scope="col">user(name | address | email)</th>
+            </tr>
+            </thead>
+            <tBody>
+            <tr th:each="order,iter : ${orders}">
+                <td th:text="${iter.index + 1}"></td>
+                <td th:text="${order.getEmail()}"></td>
+                <td th:text="${order.getAddress()}"></td>
+                <td th:text="${order.getOrderDate()}"></td>
+                <td>
+                    <div th:each="product : ${order.getProducts()}">
+                        <span th:text="${product.getName()} + ' ||'"></span>
+                        <span th:text="${product.getPrice()}"></span>
+                    </div>
+                </td>
+                <td>
+                   <div th:each="user : ${order.getUser()}">
+                       <span th:text="${user.getUsername() + ' ||'}"></span>
+                       <span th:text="${user.getAddress()} + ' ||'"></span>
+                       <span th:text="${user.getEmail()} + ' ||'"></span>
+                   </div>
+                </td>
+            </tr>
+            </tBody>
+        </table>
+            <button type="submit" class="btn btn-primary">Выгрузить отчет</button>
+        </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </body>
 </html>
