--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/admin">Консоль администратора</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/users">Управление пользователями</a>
+                </li>
             </ul>
             <span class="navbar-text mr-3" th:utext="${profile.username}"></span>
             <form action="/logout" method="post">
